--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -32,8 +32,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/node": "^25.0.8",
     "@types/react": "^18.3.10",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
